tests/tooling/fixtures/native/recovery/positive/message_send_direct_nil_receiver_keyword_elision.objc3
// Positive fixture: direct nil receiver keyword message-send is compile-time elided to zero without runtime dispatch.
module MessageSendDirectNilReceiverKeywordElision;

fn main() {
  let sent = [nil ping: 4 pong: 5];
  return sent + 7;
}
