tests/tooling/fixtures/native/recovery/negative/negative_assignment_parser_missing_bitwise_compound_semicolon.objc3
// Expected diagnostic code(s): O3P104.
module NegativeAssignmentParserMissingBitwiseCompoundSemicolon;

fn main() -> i32 {
  let value = 5;
  value ^= 3
  return value;
}
